<resources>
    <string name="app_name">PomoPet</string>
    <string name="tap_anywhere_to_start">Tap anywhere to start</string>
    <string name="welcome_to_pomopet">Welcome to PomoPet!</string>
    <string name="register_description">You will be an owner of your very own pet! \n\n
        Don\'t worry. They can take care of themselves, but they can not seem to grow! \n\n
        That is where you come in. These pets are hungry for inspiration and energy. \n\n
        Perhaps you could be the inspiration they need!
    </string>
    <string name="signed_by">Signed by:</string>
    <string name="title_activity_view_exercises">ViewExercises</string>
    <string name="tap_to_hatch">Tap anywhere to hatch</string>
    <string name="tap_anywhere">Tap anywhere</string>
    <string name="congrats">Congratulations!</string>
    <string name="name_your_pet">Please name your pet.</string>
    <string name="semicolon">:</string>
    <string name="submit">Submit</string>
    <string name="playlist">Playlist</string>
    <string name="message">Message</string>
    <string name="level_up_message">%1$s is ready to level up!\n\n%1$s can level up twice if you exercise alongside them!</string>
    <string name="tap_here_to_level_up">Tap here to level up!</string>
    <string name="question_mark">\?</string>
    <string name="level_up_once">Level up (X1)</string>
    <string name="level_up_twice">Level up (X2)</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="break_duration">Break Duration</string>
    <string name="pomodoros_duration">Pomodoros</string>
    <string name="locked_item">Item is locked!\nEvolve your pet to see what it is.</string>
    <string name="tap_on_an_item">Tap on an item to view its description.</string>
    <string name="red_evol1_item">%1$s seems to have taken a liking for this apple.
        They love to roll this fruit around, knocking anything in its way. They once tried asking you to play fetch with it. …Well, let\'s say it ended up in a mess.</string>
    <string name="red_evol2_item">A UFO you bought for %1$s. The UFO\'s original color was gray, but they painted it to match to their liking.
        They stared at this UFO for a long time while you two were walking down the street. You remembered seeing a tear in their eye…
        </string>
    <string name="red_evol3_item">A spooky doll %1$s has sewn for you. The doll resembles closely to them. You feel uneasy holding it, but you appreciate the thought. </string>
    <string name="purple_evol1_item">A fluffy pillow. Simple, but %1$s loves it, especially when the pillow is cold. Good thing %1$s is a raincloud, huh? </string>
    <string name="purple_evol2_item">%1$s has gotten worried that they have been overly emotional about everything, that they bought you an umbrella for you to shield yourself from their tears.
    You didn\'t mind, but %1$s insisted that you take it.</string>
    <string name="purple_evol3_item">%1$s has been so happy nowadays that they shed tears. One tear stood out from the rest.
    Seems that %1$s does not mind you taking it.</string>
    <string name="orange_evol1_item">You\'re not entirely sure what this is. %1$s says they use this as a mask on Halloween, but if they\'re already a paper bag… Best not to wonder.</string>
    <string name="orange_evol2_item">%1$s\'s nightlight. They can\'t sleep without it at night after that one time they shook you awake in the middle of the night.</string>
    <string name="orange_evol3_item">A soda can from %1$s\'s collection of soda collection. It\'s priceless as it apparently was bought over 20 years ago! How time flies…</string>
</resources>